deployment/apps/node-identifier/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: node-identifier-app-http
  namespace: node-identifier
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: shared-default-gateway
    namespace: default
    sectionName: shared-https
  hostnames:
  - id.apps.example.com
  rules:
  - matches:
    - path:	
        type: PathPrefix	
        value: /
    backendRefs:
    - group: ''
      kind: Service
      name: node-identifier-service
      port: 80
      weight: 1
